Add List resource
